test/qnumericError4.slq

def maj(x:ğ”¹,y:ğ”¹,z:ğ”¹)lifted => if x=y then y else z;
def H_n[n:â„•](xs:ğ”¹^n){ // error
	if nâ‰ 0 {
		with (x,xs):=xs do {
			x:=H(x);
			xs:=H_n(xs);
		}
	}
	return xs;
}
def dj(){
	xs:=vector(3,0:ğ”¹);
	with xs:=H_n(xs) do {
		if maj(xs) {
			phase(Ï€);
		}
	}
	return measure(xs)â‰ 0; // error
}
